Fri Nov 30 06:42:17 UTC 2007  J.T. Conklin  <jtc@acorntoolworks.com>

        * tests/Bug_2953_Regression/run_test.pl:

          Fix typo in error message.

Fri Nov 30 00:38:11 UTC 2007  J.T. Conklin  <jtc@acorntoolworks.com>

        * TAO_IDL/be/be_visitor_template_export.cpp:
        * examples/RTScheduling/Task_Stats.inl:
        * orbsvcs/tests/unit/Notify/MC/Statistic/Statistic.cpp:
        * tao/Codeset/Codeset_Translator_Factory_T.cpp:
        * tests/Bug_2677_Regression/server.cpp:
        * tests/Bug_2735_Regression/server.cpp:
        * tests/Bug_2936_Regression/bug2936.cpp:
        * tests/Param_Test/options.cpp:

          Add #include "ace/Log_Msg.h".

        * tao/AnyTypeCode/Struct_TypeCode.cpp:
        * tao/PolicyC.cpp:

          Add #include "tao/SystemException.h"

        * tao/DiffServPolicy/Server_Network_Priority_Policy.cpp:
        * tao/DynamicInterface/DII_Arguments_Converter_Impl.cpp:
        * tao/IORManipulation/IORManip_IIOP_Filter.cpp:
        * tao/Messaging/AMI_Arguments_Converter_Impl.cpp:
        * tao/Messaging/ExceptionHolder_i.cpp:

          Add #include "tao/CDR.h"

        * tao/DynamicAny/DynUnion_i.cpp:

          Add #include "tao/DynEnum_i.h"

        * tao/GIOP_Message_Base.h:
        * tao/Invocation_Base.h:
        * tao/Messaging/AMH_Response_Handler.h:
        * tao/operation_details.h:

          Add #include "tao/Exception.h"

        * tao/Request_Dispatcher.h:

          Add #include "tao/TAO_Export.h"

        * orbsvcs/tests/unit/Notify/MC/NotificationServiceMonitor/NotificationServiceMonitor.cpp:
        * orbsvcs/tests/unit/Notify/MC/Statistic_Registry/Statistic_Registry.cpp:

          Add #include "tao/TAO_Singleton_Manager.h"

        * tests/Bug_1383_Regression/SimpleClient.cpp:
        * tests/Portable_Interceptors/Bug_2510_Regression/client.cpp:

          Add #include "ace/Thread.h"

        * tests/Param_Test/anyop.cpp:

          Add #include "tao/Stub.h"
