@@ -1,4 +1,0 @@
-(tao573 Similar to tao567, but not with an abstract base valuetype)
-
-when the describe_ext_value() call is done, this produces
-BAD_PARAM exception incorrectly.
